Fix paddings on small screens, change typeface, fix anchor wrapping

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -28,7 +28,7 @@ div:empty { display: none; }
 
 body {
     font-size: 120%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     
     /* Reset sizings */
     margin: 0; padding: 0; border: 0;
@@ -36,7 +36,7 @@ body {
 
 p, ul, ol {
     /* Only paragraphs and lists should have serifs */
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Titillium Web', serif;
 }
 
 h1, h2, h3, h4, h5, h6, button {
@@ -45,27 +45,28 @@ h1, h2, h3, h4, h5, h6, button {
     text-transform: uppercase;
 }
 
+/* Anchors */
 a {
+    color: #fc0;
+    background-color: #352245;
+    text-decoration: underline;
+    white-space: nowrap;
+}
+a:hover {
     background-color: #fc0;
     color: #352245;
     text-decoration: none;
 }
 
-a:hover {
-    color: #fc0;
-    background-color: #352245;
-    text-decoration: underline;
-}
-
 /* Add external URL symbol to hrefs */
-a[href^="http"]:after {
+a[href^='http']:after {
     font-family: 'fontello';
-    content: " \f08e";
+    content: '\00a0\f08e';
 }
 
 /* Normal section */
 section.code4.code4-section {
-    padding: 5rem 0rem;
+    padding-top: 5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,6 +78,7 @@ section.code4.code4-section {
     section.code4.code4-section {
         padding-left: 3rem;
         padding-right: 3rem;
+        padding-bottom: 5rem;
     }
 }
 
@@ -102,8 +104,18 @@ section.code4.code4-section div.code4.code4-content-full {
 section.code4.code4-section div.code4.code4-content.code4-content-alt {
     background-color: #fc0;
     color: #352245;
-    padding: 3rem;
-    margin: -6rem 0 0 0;
+}
+section.code4.code4-section div.code4.code4-content.code4-content-alt a {
+    background-color: #fc0;
+    color: #352245;
+    text-decoration: underline;
+    white-space: nowrap;
+}
+section.code4.code4-section div.code4.code4-content.code4-content-alt a:hover {
+    
+    color: #fc0;
+    background-color: #352245;
+    text-decoration: none;
 }
 
 /* Footer content */
@@ -112,7 +124,7 @@ section.code4.code4-section div.code4.code4-content.code4-content-footer {
     font-size: 1.2rem;
 }
 section.code4.code4-section div.code4.code4-content.code4-content-footer p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 /* Code4 buttons */
@@ -162,7 +174,6 @@ div.code4.code4-content-alt button.code4.code4-button:hover {
 }
 #theMap {
     height: 27rem;
-    margin: 1rem 0;
 }
 #theDonateButton {
     background-color: #3eb14d;
